src/tests/code/fail/fail_int_literal_oct.u
entrypoint:~()->(i64{0q435627934A})	// Characters 9 and A are invalid in a octal integer.